--- a/views/work.jade
+++ b/views/work.jade
@@ -3,7 +3,8 @@ extends layout
 block content
 
 		h2 FCC.gov
-		img(src="/img/fcc.jpg", class="thumb")
+		a(href="/img/fcc.jpg")
+			img(src="/img/fcc.jpg", class="thumb")
 		ul.list
 			li Scripted automated tests with <a href="http://docs.seleniumhq.org/">Selenium</a> to ensure continuing functionality.
 			li Created wireframes and reports based on user behavior and site analytics.
@@ -13,16 +14,20 @@ block content
 			li.subtle Drupal
 
 		h2 Voto Latino
-		img(src="/img/voto-android.jpg", class="thumb small")
-		img(src="/img/voto-ios.jpg", class="thumb small")
+		a(href="/img/voto-android.jpg")
+			img(src="/img/voto-android.jpg", class="thumb small")
+		a(href="/img/voto-ios.jpg")
+			img(src="/img/voto-ios.jpg", class="thumb small")
 		ul.list
 			li Coded the front end of Voto Latino's voting application for <a href="https://itunes.apple.com/app/votolatino/id568988087?mt=8">iOS</a> and <a href="https://play.google.com/store/apps/details?id=org.votolatino.android">Android</a>.
 			li HTML, CSS and jQuery
 			li.subtle PhoneGap
 
 		h2 U-Haul's internal tools
-		img(src="/img/tools_mobile.jpg", class="thumb small")
-		img(src="/img/tools.jpg", class="thumb small")
+		a(href="/img/tools_mobile.jpg")
+			img(src="/img/tools_mobile.jpg", class="thumb small")
+		a(href="/img/tools.jpg")
+			img(src="/img/tools.jpg", class="thumb small")
 		ul.list
 			li Created and improved digital tools used by <span class="nowrap">U-Haul</span>.
 			li Organized tools from various areas into one cohesive unit.
@@ -31,13 +36,15 @@ block content
 			li.subtle Visual Studio
 
 		h2 U-Haul trip sharing
-		img(src="/img/trip.jpg", class="thumb")
+		a(href="/img/trip.jpg")
+			img(src="/img/trip.jpg", class="thumb")
 		ul.list
 			li Designed and championed a tool that offers to import social media accounts for the duration of a move and share with friends and family.
 			li Wireframes, mockups, CSS, HTML and graphics
 
 		h2 AMERCO
-		img(src="/img/amerco.jpg", class="thumb")
+		a(href="/img/amerco.jpg")
+			img(src="/img/amerco.jpg", class="thumb")
 		ul.list
 			li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
 			li Met needs of company and government.
