--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,9 @@ html
 	head
 		title #{title} - David Crowley
 		link(rel='stylesheet', href='/css/style.css')
+		block scripts
+			script(src='/js/jquery.js')
+
 	body
 		header
 			a(href='/')
@@ -14,6 +17,7 @@ html
 				block content
 		footer
 			p Running on node with Express, Jade and Stylus | <a href="https://github.com/mrdcrowley/david-crowley-com">Fork on Github</a> | <a href="/work/">Portfolio</a>
+
 // FUTURE STUFF
 //				block tumblr
 //				block work
