--- a/views/work.jade
+++ b/views/work.jade
@@ -4,7 +4,7 @@ block content
 
 		h2 FCC.gov
 		a(href="/img/fcc.jpg")
-			img(src="/img/fcc.jpg", class="thumb")
+			img(data-original="/img/fcc.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
 		ul.list
 			li Scripted automated tests with <a href="http://docs.seleniumhq.org/">Selenium</a> to ensure continuing functionality.
 			li Created wireframes and reports based on user behavior and site analytics.
@@ -15,9 +15,9 @@ block content
 
 		h2 Voto Latino
 		a(href="/img/voto-android.jpg")
-			img(src="/img/voto-android.jpg", class="thumb small")
+			img(data-original="/img/voto-android.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		a(href="/img/voto-ios.jpg")
-			img(src="/img/voto-ios.jpg", class="thumb small")
+			img(data-original="/img/voto-ios.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		ul.list
 			li Coded the front end of Voto Latino's voting application for <a href="https://itunes.apple.com/app/votolatino/id568988087?mt=8">iOS</a> and <a href="https://play.google.com/store/apps/details?id=org.votolatino.android">Android</a>.
 			li HTML, CSS and jQuery
@@ -25,9 +25,9 @@ block content
 
 		h2 U-Haul's internal tools
 		a(href="/img/tools_mobile.jpg")
-			img(src="/img/tools_mobile.jpg", class="thumb small")
+			img(data-original="/img/tools_mobile.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		a(href="/img/tools.jpg")
-			img(src="/img/tools.jpg", class="thumb small")
+			img(data-original="/img/tools.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		ul.list
 			li Created and improved digital tools used by <span class="nowrap">U-Haul</span>.
 			li Organized tools from various areas into one cohesive unit.
@@ -37,14 +37,14 @@ block content
 
 		h2 U-Haul trip sharing
 		a(href="/img/trip.jpg")
-			img(src="/img/trip.jpg", class="thumb")
+			img(data-original="/img/trip.jpg", src="/img/placeholder.gif", height="100%", width="100%", height="100%", width="100%", class="thumb")
 		ul.list
 			li Designed and championed a tool that offers to import social media accounts for the duration of a move and share with friends and family.
 			li Wireframes, mockups, CSS, HTML and graphics
 
 		h2 AMERCO
 		a(href="/img/amerco.jpg")
-			img(src="/img/amerco.jpg", class="thumb")
+			img(data-original="/img/amerco.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
 		ul.list
 			li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
 			li Met needs of company and government.
