--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,8 +132,18 @@ body {
 header {
   background-color: #333;
   border-bottom: 1px solid #242424;
+  height: auto;
+  overflow: hidden;
   padding-left: 100px;
   text-shadow: 0px -1px 0px #242424;
+  -webkit-transition: height 0.1s ease-out;
+  -moz-transition: height 0.1s ease-out;
+  -o-transition: height 0.1s ease-out;
+  -ms-transition: height 0.1s ease-out;
+  transition: height 0.1s ease-out;
+}
+header.waitToAnimate {
+  height: 0;
 }
 header h1 {
   font: 600 1.5em/1 'Raleway', sans-serif;
@@ -251,15 +261,13 @@ footer {
 .right {
   float: right;
 }
-img.thumb,
-iframe.thumb {
+.thumb {
   float: right;
   margin-bottom: 4em;
   margin-left: 2em;
   max-width: 62%;
 }
-img.thumb.small,
-iframe.thumb.small {
+.thumb.small {
   max-width: 30%;
 }
 .nowrap {
@@ -269,4 +277,27 @@ iframe.thumb.small {
   opacity: 0.75;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=75);
   filter: alpha(opacity=75);
+}
+@media all and (max-device-width: 851px) {
+  #container {
+    padding: 2em;
+  }
+  .one-half,
+  .one-third,
+  .two-thirds {
+    width: auto;
+  }
+  .left,
+  .right {
+    float: none;
+  }
+  .thumb,
+  .thumb.small {
+    float: none;
+    height: auto;
+    margin: 0;
+    margin-bottom: 1em;
+    max-width: 100%;
+    width: 100%;
+  }
 }
