--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,11 +3,9 @@ html
 	head
 		title #{title} - David Crowley
 		link(rel='stylesheet', href='/css/style.css')
-		block scripts
-			script(src='/js/jquery.js')
 
 	body
-		header
+		header.waitToAnimate
 			a(href='/')
 				h1
 					span(data-shadow-text="David Crowley") David Crowley
@@ -17,6 +15,11 @@ html
 				block content
 		footer
 			p Running on node with Express, Jade and Stylus | <a href="https://github.com/mrdcrowley/david-crowley-com">Fork on Github</a> | <a href="/work/">Portfolio</a>
+
+	block scripts
+		script(src='/js/jquery.js')
+		script(src='/js/jquery.lazyload.min.js')
+		script(src='/js/david-crowley-com.js')
 
 // FUTURE STUFF
 //				block tumblr
