--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,8 @@ html
 			#content
 				block content
 		footer
-			p Running on node with Express, Jade and Stylus | <a href="https://github.com/mrdcrowley/david-crowley-com">Fork on Github</a> | <a href="/work/">Portfolio</a>
+			p Running on node with Express, Jade and Stylus
+			p <a href="https://github.com/mrdcrowley/david-crowley-com">Fork on Github</a> | <a href="/work/">Portfolio</a>
 
 	block scripts
 		script(src='/js/jquery.js')
