--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -48,9 +48,7 @@ header
 	overflow: hidden
 	padding-left 100px
 	text-shadow 0px -1px 0px darken(colorHeader, 30%)
-	transition height animationSpeed ease-out
-	&.waitToAnimate
-		height 0
+	transition all animationSpeed linear
 	h1
 		font: 600 1.5em/1 'Raleway', sans-serif
 		color: rgba(0,0,0,.5)
