cleanup and credit

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -44,11 +44,11 @@ body
 
 header
 	background url('/img/headerBg.png') bottom
-	height auto
+	height 0
 	overflow: hidden
 	padding-left 100px
 	text-shadow 0px -1px 0px darken(colorHeader, 30%)
-	transition all animationSpeed linear
+	transition height animationSpeed linear
 	h1
 		font: 600 1.5em/1 'Raleway', sans-serif
 		color: rgba(0,0,0,.5)
