--- a/views/index.jade
+++ b/views/index.jade
@@ -27,14 +27,9 @@ block content
 
 block tumblr
 	h2 Tumblr
-	h3 Rusty
 	p
-		| In a world where kids my age are popping mollies with leather
-		| Sitting on Tumblr, never outside or enjoying the weather
-		| Can name a sweater, but not a talent or don't know if whether
-		| Or not they got one, tried to change their life for the better
-		| I was a drama club kid, I'd run with a fun dip, my nuts itched
-		| I was defiant, always said, "Fuck shit"
+		| Vivamus hendrerit arcu sed erat molestie
+		| vehicula.
 
 block twitter
 	p
