--- a/public/css/style.css
+++ b/public/css/style.css
@@ -136,15 +136,15 @@ body {
 }
 header {
   background: url("/img/headerBg.png") bottom;
-  height: auto;
+  height: 0;
   overflow: hidden;
   padding-left: 100px;
   text-shadow: 0px -1px 0px #242424;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  transition: all 0.2s linear;
+  -webkit-transition: height 0.2s linear;
+  -moz-transition: height 0.2s linear;
+  -o-transition: height 0.2s linear;
+  -ms-transition: height 0.2s linear;
+  transition: height 0.2s linear;
 }
 header h1 {
   font: 600 1.5em/1 'Raleway', sans-serif;
