added scripts and images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,7 +155,7 @@ header h1 {
 header h1 span {
   font-size: 4em;
   z-index: 100;
-  text-shadow: 0.04em 0.04em 0 #9cb8b3;
+  text-shadow: -0.04em -0.04em 0 #9cb8b3;
   -webkit-transition: all 0.2s ease-out;
   -moz-transition: all 0.2s ease-out;
   -o-transition: all 0.2s ease-out;
@@ -163,7 +163,11 @@ header h1 span {
   transition: all 0.2s ease-out;
 }
 header h1 span:hover {
-  text-shadow: -0.04em -0.04em 0 #9cb8b3;
+  text-shadow: 0.04em 0.04em 0 #9cb8b3;
+}
+header h1 span:active {
+  top: -200px;
+  text-shadow: none;
 }
 header h1 span,
 header h1 span:after {
@@ -180,8 +184,8 @@ header h1 span:after {
   color: rgba(255,255,255,0.25);
   text-shadow: none;
   position: absolute;
-  left: 0.0875em;
-  top: 0.0875em;
+  left: -0.0875em;
+  top: -0.0875em;
   z-index: -1;
   -webkit-mask-image: url("http://f.cl.ly/items/1t1C0W3y040g1J172r3h/mask.png");
   -webkit-transition: all 0.2s ease-out;
@@ -193,8 +197,8 @@ header h1 span:after {
 header h1 span:hover:after {
   top: 0;
   left: 0;
-  left: -0.0875em;
-  top: -0.0875em;
+  left: 0.0875em;
+  top: 0.0875em;
 }
 header .byline {
   color: rgba(255,255,255,0.5);
