updated some text and links

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,7 +21,7 @@ block content
 			li
 				a(href="http://slantback.tumblr.com/") tumblr
 			li
-				a(href="https://github.com/mrdcrowley?tab=repositories") GitHub
+				a(href="https://github.com/mrdcrowley/") GitHub
 			li
 				a(href="http://www.youtube.com/user/slantback/videos") Youtube
 
