--- a/views/work.jade
+++ b/views/work.jade
@@ -3,23 +3,31 @@ extends layout
 block content
 
 		h2 FCC.gov
-		a(href="/img/fcc.jpg")
+		a(href="http://fcc.gov/")
 			img(data-original="/img/fcc.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
 		ul.list
-			li Scripted automated tests with <a href="http://docs.seleniumhq.org/">Selenium</a> to ensure continuing functionality.
+			li 
+				| Scripted automated tests using Python and 
+				a(href="http://docs.seleniumhq.org/") Selenium
+				|  to ensure continuing functionality.
 			li Created wireframes and reports based on user behavior and site analytics.
-			li Wrote and recorded tutorials for new developers.
+			li Wrote and recorded tutorials for developers.
 			li Developed a series of jQuery plugins.
 			li HTML, CSS and jQuery
 			li.subtle Drupal
 
 		h2 Voto Latino
-		a(href="/img/voto-android.jpg")
+		a(href="https://play.google.com/store/apps/details?id=org.votolatino.android")
 			img(data-original="/img/voto-android.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-		a(href="/img/voto-ios.jpg")
+		a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
 			img(data-original="/img/voto-ios.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		ul.list
-			li Coded the front end of Voto Latino's voting application for <a href="https://itunes.apple.com/app/votolatino/id568988087?mt=8">iOS</a> and <a href="https://play.google.com/store/apps/details?id=org.votolatino.android">Android</a>.
+			li 
+				| Coded the front end of Voto Latino's mobile app for 
+				a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8") iOS 
+				| and 
+				a(href="https://play.google.com/store/apps/details?id=org.votolatino.android") Android
+				| .
 			li HTML, CSS and jQuery
 			li.subtle PhoneGap
 
@@ -29,9 +37,10 @@ block content
 		a(href="/img/tools.jpg")
 			img(data-original="/img/tools.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
 		ul.list
-			li Created and improved digital tools used by <span class="nowrap">U-Haul</span>.
-			li Organized tools from various areas into one cohesive unit.
-			li Updated old code by various departments to meet the mobile requirements of the foreseeable future.
+			li Created and improved digital tools (mobile and public sites, intranet, point of sales, devices used on counters).
+			li Shadowed users inside and outside the company, defined tasks for usability testing and incorporated findings, listened to hours of phone calls and poured through analytics and recorded sessions.
+			li Organized tools from various sites throughout the company into one cohesive unit.
+			li Updated old code by various departments to be mobile.
 			li HTML, CSS and jQuery
 			li.subtle Visual Studio
 
@@ -43,7 +52,7 @@ block content
 			li Wireframes, mockups, CSS, HTML and graphics
 
 		h2 AMERCO
-		a(href="/img/amerco.jpg")
+		a(href="http://www.amerco.com/")
 			img(data-original="/img/amerco.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
 		ul.list
 			li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
@@ -52,7 +61,7 @@ block content
 			li Wireframes, mockups, graphics, HTML and CSS
 
 		h2 Ultimate Machine (Arduino)
-		<iframe height="315" width="100%" src="http://www.youtube.com/embed/4_43jzikj1I" frameborder="0" allowfullscreen class="thumb"></iframe>
+		<iframe height="360" width="640" src="http://www.youtube.com/embed/4_43jzikj1I" frameborder="0" allowfullscreen class="thumb"></iframe>
 		ul.list
 			li <a href="https://github.com/mrdcrowley/ultimate_machine">Built a version</a> of information theorist Claude Shannon's <a href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php">Ultimate Machine</a>.
 
