--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -111,13 +111,19 @@ header
 	float left
 	padding-top 20px
 	h2
+		color rgba(0,0,0,.2)
+		font-family fontAlt
+		font-size 240%
+		font-style italic
+		font-weight bold
+	h3
 		background rgba(0,0,0,.2)
 		clear both
 		font-family fontAlt
 		font-size 180%
 		font-weight 700
 		padding .5em
-	h3
+	h4
 		clear both
 		font-size: 140%
 		font-weight 700
