--- a/views/work.jade
+++ b/views/work.jade
@@ -2,101 +2,101 @@ extends layout
 
 block content
 
-		h2 FCC.gov
-		a(href="http://fcc.gov/")
-			img(data-original="/img/fcc.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
-		ul.list
-			li 
-				| Scripted automated tests using Python and 
-				a(href="http://docs.seleniumhq.org/") Selenium
-				|  to ensure continuing functionality.
-			li Created wireframes and reports based on user behavior and site analytics.
-			li Wrote and recorded tutorials for developers.
-			li Developed a series of jQuery plugins.
-			li HTML, CSS and jQuery
-			li.subtle Drupal
+	h3 FCC.gov
+	a(href="http://www.fcc.gov/")
+		img(data-original="/img/fcc.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
+	ul.list
+		li 
+			| Scripted automated tests using Python and 
+			a(href="http://docs.seleniumhq.org/") Selenium
+			|  to ensure continuing functionality.
+		li Created wireframes and reports based on user behavior and site analytics.
+		li Wrote and recorded tutorials for developers.
+		li Developed a series of jQuery plugins.
+		li HTML, CSS and jQuery
+		li.subtle Drupal
 
-		h2 Voto Latino
-		a(href="https://play.google.com/store/apps/details?id=org.votolatino.android")
-			img(data-original="/img/voto-android.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-		a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
-			img(data-original="/img/voto-ios.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-		ul.list
-			li 
-				| Coded the front end of Voto Latino's mobile app for 
-				a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8") iOS 
-				| and 
-				a(href="https://play.google.com/store/apps/details?id=org.votolatino.android") Android
-				| .
-			li HTML, CSS and jQuery
-			li.subtle PhoneGap
+	h3 Voto Latino
+	a(href="https://play.google.com/store/apps/details?id=org.votolatino.android")
+		img(data-original="/img/voto-android.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+	a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8")
+		img(data-original="/img/voto-ios.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+	ul.list
+		li 
+			| Coded the front end of Voto Latino's mobile app for 
+			a(href="https://itunes.apple.com/app/votolatino/id568988087?mt=8") iOS 
+			| and 
+			a(href="https://play.google.com/store/apps/details?id=org.votolatino.android") Android
+			| .
+		li HTML, CSS and jQuery
+		li.subtle PhoneGap
 
-		h2 U-Haul's internal tools
-		a(href="/img/tools_mobile.jpg")
-			img(data-original="/img/tools_mobile.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-		a(href="/img/tools.jpg")
-			img(data-original="/img/tools.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
-		ul.list
-			li Created and improved digital tools (mobile and public sites, intranet, point of sales, devices used on counters).
-			li Shadowed users inside and outside the company, defined tasks for usability testing and incorporated findings, listened to hours of phone calls and poured through analytics and recorded sessions.
-			li Organized tools from various sites throughout the company into one cohesive unit.
-			li Updated old code by various departments to be mobile.
-			li HTML, CSS and jQuery
-			li.subtle Visual Studio
+	h3 U-Haul's internal tools
+	a(href="/img/tools_mobile.jpg")
+		img(data-original="/img/tools_mobile.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+	a(href="/img/tools.jpg")
+		img(data-original="/img/tools.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb small")
+	ul.list
+		li Created and improved digital tools (mobile and public sites, intranet, point of sales, devices used on counters).
+		li Shadowed users inside and outside the company, defined tasks for usability testing and incorporated findings, listened to hours and hours of phone calls and poured through analytics and recorded sessions.
+		li Organized tools from various sites throughout the company into one cohesive unit.
+		li Updated old code by various departments to be mobile.
+		li HTML, CSS and jQuery
+		li.subtle Visual Studio
 
-		h2 U-Haul trip sharing
-		a(href="/img/trip.jpg")
-			img(data-original="/img/trip.jpg", src="/img/placeholder.gif", height="100%", width="100%", height="100%", width="100%", class="thumb")
-		ul.list
-			li Designed and championed a tool that offers to import social media accounts for the duration of a move and share with friends and family.
-			li Wireframes, mockups, CSS, HTML and graphics
+	h3 U-Haul trip sharing
+	a(href="/img/trip.jpg")
+		img(data-original="/img/trip.jpg", src="/img/placeholder.gif", height="100%", width="100%", height="100%", width="100%", class="thumb")
+	ul.list
+		li Designed and championed a tool that offers to import social media accounts for the duration of a move and share with friends and family.
+		li Wireframes, mockups, CSS, HTML and graphics
 
-		h2 AMERCO
-		a(href="http://www.amerco.com/")
-			img(data-original="/img/amerco.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
-		ul.list
-			li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
-			li Met needs of company and government.
-			li Designed tools to allow content creation.
-			li Wireframes, mockups, graphics, HTML and CSS
+	h3 AMERCO
+	a(href="http://www.amerco.com/")
+		img(data-original="/img/amerco.jpg", src="/img/placeholder.gif", height="100%", width="100%", class="thumb")
+	ul.list
+		li Designed the corporate website for <span class="nowrap">U-Haul's</span> parent company.
+		li Met needs of company and government.
+		li Designed tools to allow content creation.
+		li Wireframes, mockups, graphics, HTML and CSS
 
-		h2 Ultimate Machine (Arduino)
-		<iframe height="360" width="640" src="http://www.youtube.com/embed/4_43jzikj1I" frameborder="0" allowfullscreen class="thumb"></iframe>
-		ul.list
-			li <a href="https://github.com/mrdcrowley/ultimate_machine">Built a version</a> of information theorist Claude Shannon's <a href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php">Ultimate Machine</a>.
+	h3 Ultimate Machine (Arduino)
+	<iframe height="360" width="640" src="http://www.youtube.com/embed/4_43jzikj1I" frameborder="0" allowfullscreen class="thumb"></iframe>
+	ul.list
+		li <a href="https://github.com/mrdcrowley/ultimate_machine">Built a version</a> of information theorist Claude Shannon's <a href="http://www.kk.org/thetechnium/archives/2008/03/the_unspeakable.php">Ultimate Machine</a>.
 
-		div.two-thirds.small.left
-			h2 Other work
-			div.one-half.left
-				h3 U-Haul
-				ul.list
-					li Created and updated electronic signage.
-					li Customer and employee shadowing, visitor analytics, user interviews and usability tests.
-					li Rewrote CSS for responsive and mobile ages.
-					li Created, improved and eliminated various pages, sites, wireframes, mockups, recommendations and processes.
-				h3 U-Haul unattended rentals
-				ul.list
-					li Designed an unattended rental experience for iPads.
-					li Observed locations.
-					li Created wireframes and mockups.
-			div.one-half.right
-				h3 Human Resources
-				ul.list
-					li Redesigned the Human Resources site for <span class="nowrap">U-Haul</span> employees.
-					li Organized a sprawling site into three sections.
-					li Mockups, HTML and CSS
-				h3 Employee scheduling
-				ul.list
-					li Redesigned the tool <span class="nowrap">U-Haul</span> uses to schedule employees. The existing version had grown buggy and required Internet Explorer and training.
-					li Designed a simple tool that is still working years later and has transitioned to mobile devices with ease.
-					li Removed the need for training materials and courses.
-		div.one-third.small.right
-			h2 Personal
+	div.two-thirds.small.left
+		h3 Other work
+		div.one-half.left
+			h4 U-Haul
 			ul.list
-				li Short distance runner
-				li Arduino and Raspberry Pi hacker
-				li Wood and 3D printing tinkerer
-				li Dog companion
-				li Music and boring book appreciator
-				li Drinker of dark coffee, tea and beer
-				li Baseball watcher and basketball amateur
+				li Created and updated electronic signage.
+				li Customer and employee shadowing, visitor analytics, user interviews and usability tests.
+				li Rewrote CSS for responsive and mobile ages.
+				li Created, improved and eliminated various pages, sites, wireframes, mockups, recommendations and processes.
+			h4 U-Haul unattended rentals
+			ul.list
+				li Designed an unattended rental experience for iPads.
+				li Observed locations.
+				li Created wireframes and mockups.
+		div.one-half.right
+			h4 Human Resources
+			ul.list
+				li Redesigned the Human Resources site for <span class="nowrap">U-Haul</span> employees.
+				li Organized a sprawling site into three sections.
+				li Mockups, HTML and CSS
+			h4 Employee scheduling
+			ul.list
+				li Redesigned the tool <span class="nowrap">U-Haul</span> uses to schedule employees. The existing version had grown buggy and required Internet Explorer and training.
+				li Designed a simple tool that is still working years later and has transitioned to mobile devices with ease.
+				li Removed the need for training materials and courses.
+	div.one-third.small.right
+		h3 Personal
+		ul.list
+			li Short distance runner
+			li Arduino and Raspberry Pi hacker
+			li Wood and 3D printing tinkerer
+			li Dog companion
+			li Music and boring book appreciator
+			li Drinker of dark coffee, tea and beer
+			li Baseball watcher and basketball amateur
