--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,6 +94,9 @@ a img {
 }
 /* =Variables */
 /* =Text */
+body {
+  line-height: 140%;
+}
 a {
   color: #00a6cd;
   -webkit-transition: color 0.2s ease-out;
@@ -114,10 +117,6 @@ h5,
 h6 {
   margin-bottom: 1em;
 }
-p,
-.list li {
-  line-height: 140%;
-}
 p:last-child,
 .list li:last-child {
   margin-bottom: 3em;
@@ -128,6 +127,11 @@ p:last-child,
 .small {
   font-size: 80%;
 }
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 /* =Structure */
 body {
   font-family: 'Noto Sans', Georgia, sans-serif;
@@ -137,6 +141,7 @@ body {
 header {
   background: url("/img/headerBg.png") bottom;
   height: 0;
+  margin-bottom: 2em;
   overflow: hidden;
   padding-left: 100px;
   text-shadow: 0px -1px 0px #242424;
@@ -211,9 +216,7 @@ header .byline {
   padding-right: 100px;
 }
 #contact ul li {
-  font-size: 250%;
   font-weight: 700;
-  line-height: 200%;
 }
 #contact ul li a {
   color: #333;
@@ -226,7 +229,7 @@ header .byline {
 #content {
   clear: both;
   float: left;
-  padding-top: 20px;
+  width: 75%;
 }
 #content h2 {
   color: rgba(0,0,0,0.2);
@@ -248,6 +251,10 @@ header .byline {
   font-size: 140%;
   font-weight: 700;
 }
+#sidebar {
+  float: right;
+  width: 20%;
+}
 footer {
   clear: both;
   font-size: 80%;
@@ -257,6 +264,12 @@ footer {
   filter: alpha(opacity=50);
   padding-top: 5em;
   text-align: center;
+}
+/* =Posts */
+li.post {
+  padding: 1em;
+  margin: 1em;
+  border-bottom: 1px solid #666;
 }
 /* =Utilities */
 .one-half {
