--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,10 +266,21 @@ footer {
   text-align: center;
 }
 /* =Posts */
-li.post {
-  padding: 1em;
-  margin: 1em;
-  border-bottom: 1px solid #666;
+ul.posts {
+  margin-bottom: 3em;
+}
+ul.posts li {
+  border-bottom: 1px solid #ccc;
+  -webkit-box-shadow: 0px 1px 1px rgba(255,255,255,0.75);
+  box-shadow: 0px 1px 1px rgba(255,255,255,0.75);
+  padding: 2em 0;
+  margin: 0;
+}
+ul.posts li p:last-child {
+  margin-bottom: 0;
+}
+ul.posts li img {
+  max-width: 100%;
 }
 /* =Utilities */
 .one-half {
