--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -146,10 +146,17 @@ footer
 
 
 /* =Posts */
-li.post
-	padding 1em
-	margin 1em
-	border-bottom 1px solid #666
+ul.posts
+	margin-bottom 3em
+	li
+		border-bottom 1px solid #ccc
+		box-shadow 0px 1px 1px rgba(255,255,255,.75)
+		padding 2em 0
+		margin 0
+		p:last-child 
+			margin-bottom 0
+		img
+			max-width 100%
 
 /* =Utilities */
 .one-half
