--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
 		title #{title} - David Crowley
 		link(rel='stylesheet', href='/css/style.css')
 
-	body
+	body(id='#{cssID}')
 		header.waitToAnimate
 			a(href='/')
 				h1
