--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,7 +95,7 @@ a img {
 /* =Variables */
 /* =Text */
 body {
-  line-height: 140%;
+  line-height: 150%;
 }
 a {
   color: #00a6cd;
@@ -270,17 +270,34 @@ ul.posts {
   margin-bottom: 3em;
 }
 ul.posts li {
-  border-bottom: 1px solid #ccc;
-  -webkit-box-shadow: 0px 1px 1px rgba(255,255,255,0.75);
-  box-shadow: 0px 1px 1px rgba(255,255,255,0.75);
-  padding: 2em 0;
+  border-bottom: 1px solid rgba(0,0,0,0.05);
+  font-family: Arvo, Georgia, sans-serif;
+  padding: 40px 0;
   margin: 0;
+}
+ul.posts li.quote {
+  color: #999;
+  font-size: 125%;
+  line-height: 160%;
+}
+ul.posts li:first-child {
+  padding-top: 0;
 }
 ul.posts li p:last-child {
   margin-bottom: 0;
 }
 ul.posts li img {
-  max-width: 100%;
+  background: #fff;
+  max-height: 800px;
+  max-width: 94%;
+  padding: 20px;
+}
+/* =pageWork =work */
+#pageWork #content {
+  width: 100%;
+}
+#pageWork #content #sidebar {
+  display: none;
 }
 /* =Utilities */
 .one-half {
