--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,5 @@
 extends layout
 
-
-
 block links
 	#links
 		h3 Links
@@ -20,36 +18,35 @@ block links
 block content
 
 block tumblr
-	h3 Blog
 	ul.posts
-		- each id in postsTumblr
-			li
+		- each post in postsTumblr
+			li(class='#{post.type}')
 				//- LINKS
-				- if ( id.type == 'link' )
+				- if ( post.type == 'link' )
 					p
-						a(href='#{id.url}') !{id.title}
+						a(href='#{post.url}') !{post.title}
 					p
-						!{id.description}
+						!{post.description}
 				//- PHOTOS
-				- if ( id.type == 'photo' )
-					each photo in id.photos
+				- if ( post.type == 'photo' )
+					each photo in post.photos
 						a(href='#{photo.alt_sizes[0].url}')
 							img(data-original="#{photo.alt_sizes[0].url}", height="auto", width="auto", src="/img/placeholder.gif")
 						p
-							!{id.caption}
-					#{id.title}
-					!{id.text}
+							!{post.caption}
+					#{post.title}
+					!{post.text}
 				//- QUOTES
-				- if ( id.type == 'quote' )
+				- if ( post.type == 'quote' )
 					p
-						!{id.text}
+						!{post.text}
 					p
-						!{id.source}
+						!{post.source}
 				//- VIDEOS
-				- if ( id.type == 'video' )
-					!{id.player[0].embed_code}
+				- if ( post.type == 'video' )
+					!{post.player[0].embed_code}
 					p
-						!{id.caption}
+						!{post.caption}
 	p.subtle
 		| More on 
 		a( href='http://slantback.tumblr.com/') slantback.tumblr.com
